EQ-666: Fixed TTS icon overlapping grey bar by changing height css from 99% to 95%

--- a/source/css/toolbar.css
+++ b/source/css/toolbar.css
@@ -82,7 +82,7 @@
   top: 1px;
   right: 0;
   width: 139px;
-  height: 99%;
+  height: 95%;
   background-image: url('../images/toolbar/toolbar-speech.png');
   background-size: contain;
   background-repeat: no-repeat;
